# OTA-POC

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  P0_Minimal_sample_event_log.json  P1_Secure_OTA_sample_event_log.json  P2_Layered_Fleet_sample_event_log.json  README.md  SECURITY.md  ablation_results.csv  generate_metrics.py  ota_simulator.py  pyproject.toml  requirements-dev.txt  requirements.txt  simulation_metrics.csv
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.hypothesis/constants/: 4b5bc79ec0891b2a  800a68d2ca59ecc9  949d95fe08c3fc24  bd7e9a8c55d0c21f
docs/: AUTHORSHIP.md  parameter_derivation.md
ota_poc/: __init__.py  config.py  metrics.py  simulator.py
scripts/: assert_csvs.py  assert_readme_numbers.py
tests/: conftest.py  test_ablation.py  test_metrics.py  test_properties.py  test_simulator.py
